@@ -25,13 +25,13 @@ import java.util.Locale;
 import java.util.Map;
 import java.util.Optional;
 
-import org.joda.time.DateTime;
 import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
 
 import io.goobi.viewer.AbstractDatabaseEnabledTest;
 import io.goobi.viewer.controller.DataManager;
+import io.goobi.viewer.controller.DateTools;
 import io.goobi.viewer.exceptions.AccessDeniedException;
 import io.goobi.viewer.exceptions.DAOException;
 import io.goobi.viewer.model.annotation.Comment;
@@ -691,7 +691,7 @@ public class JPADAOTest extends AbstractDatabaseEnabledTest {
         Assert.assertNotNull(comment);
         Assert.assertEquals(Long.valueOf(1), comment.getId());
         Assert.assertEquals("PI_1", comment.getPi());
-        Assert.assertEquals(new Integer(1), comment.getPage());
+        Assert.assertEquals(Integer.valueOf(1), comment.getPage());
         Assert.assertNotNull(comment.getOwner());
         Assert.assertEquals(Long.valueOf(1), comment.getOwner().getId());
         Assert.assertEquals("comment 1 text", comment.getText());
@@ -975,6 +975,20 @@ public class JPADAOTest extends AbstractDatabaseEnabledTest {
         Assert.assertEquals("license type 2 (unused)", licenseType.getDescription());
         Assert.assertEquals(true, licenseType.isOpenAccess());
         Assert.assertEquals(1, licenseType.getPrivileges().size());
+    }
+
+    /**
+     * @see JPADAO#getLicenseTypes(List)
+     * @verifies return all matching rows
+     */
+    @Test
+    public void getLicenseTypes_shouldReturnAllMatchingRows() throws Exception {
+        String[] names = new String[] { "license type 1 name", "license type 2 name" };
+        List<LicenseType> result = DataManager.getInstance().getDao().getLicenseTypes(Arrays.asList(names));
+        Assert.assertNotNull(result);
+        Assert.assertEquals(2, result.size());
+        Assert.assertEquals("license type 1 name", result.get(0).getName());
+        Assert.assertEquals("license type 2 name", result.get(1).getName());
     }
 
     @Test
@@ -1438,7 +1452,6 @@ public class JPADAOTest extends AbstractDatabaseEnabledTest {
         Assert.assertEquals(1, ret.size());
         Assert.assertEquals("license type 2 name", ret.get(0).getName());
     }
-    
 
     /**
      * @see JPADAO#getLicenses(LicenseType)
@@ -1643,21 +1656,21 @@ public class JPADAOTest extends AbstractDatabaseEnabledTest {
         Assert.assertEquals(1,
                 DataManager.getInstance()
                         .getDao()
-                        .getCMSPagesWithRelatedPi(0, 100, new DateTime(2015, 1, 1, 0, 0).toDate(), new DateTime(2015, 12, 31, 0, 0).toDate(),
+                        .getCMSPagesWithRelatedPi(0, 100, DateTools.createDate(2015, 1, 1, 0, 0), DateTools.createDate(2015, 12, 31, 0, 0),
                                 Arrays.asList("template_simple", "template_two"))
                         .size());
         // Wrong template
         Assert.assertEquals(0,
                 DataManager.getInstance()
                         .getDao()
-                        .getCMSPagesWithRelatedPi(0, 100, new DateTime(2015, 1, 1, 0, 0).toDate(), new DateTime(2015, 12, 31, 0, 0).toDate(),
+                        .getCMSPagesWithRelatedPi(0, 100, DateTools.createDate(2015, 1, 1, 0, 0), DateTools.createDate(2015, 12, 31, 0, 0),
                                 Collections.singletonList("wrong_tempalte"))
                         .size());
         // Wrong date range
         Assert.assertEquals(0,
                 DataManager.getInstance()
                         .getDao()
-                        .getCMSPagesWithRelatedPi(0, 100, new DateTime(2016, 1, 1, 0, 0).toDate(), new DateTime(2016, 12, 31, 0, 0).toDate(),
+                        .getCMSPagesWithRelatedPi(0, 100, DateTools.createDate(2016, 1, 1, 0, 0), DateTools.createDate(2016, 12, 31, 0, 0),
                                 Collections.singletonList("template_simple"))
                         .size());
     }
@@ -1670,10 +1683,10 @@ public class JPADAOTest extends AbstractDatabaseEnabledTest {
     public void isCMSPagesForRecordHaveUpdates_shouldReturnCorrectValue() throws Exception {
         Assert.assertTrue(DataManager.getInstance()
                 .getDao()
-                .isCMSPagesForRecordHaveUpdates("PI_1", null, new DateTime(2015, 1, 1, 0, 0).toDate(), new DateTime(2015, 12, 31, 0, 0).toDate()));
+                .isCMSPagesForRecordHaveUpdates("PI_1", null, DateTools.createDate(2015, 1, 1, 0, 0), DateTools.createDate(2015, 12, 31, 0, 0)));
         Assert.assertFalse(DataManager.getInstance()
                 .getDao()
-                .isCMSPagesForRecordHaveUpdates("PI_1", null, new DateTime(2016, 1, 1, 0, 0).toDate(), new DateTime(2016, 12, 31, 0, 0).toDate()));
+                .isCMSPagesForRecordHaveUpdates("PI_1", null, DateTools.createDate(2016, 1, 1, 0, 0), DateTools.createDate(2016, 12, 31, 0, 0)));
         Assert.assertFalse(DataManager.getInstance().getDao().isCMSPagesForRecordHaveUpdates("PI_2", null, null, null));
     }
 
@@ -1686,19 +1699,19 @@ public class JPADAOTest extends AbstractDatabaseEnabledTest {
         Assert.assertEquals(1,
                 DataManager.getInstance()
                         .getDao()
-                        .getCMSPageWithRelatedPiCount(new DateTime(2015, 1, 1, 0, 0).toDate(), new DateTime(2015, 12, 31, 0, 0).toDate(),
+                        .getCMSPageWithRelatedPiCount(DateTools.createDate(2015, 1, 1, 0, 0), DateTools.createDate(2015, 12, 31, 0, 0),
                                 Arrays.asList("template_simple", "template_two")));
         // Wrong template
         Assert.assertEquals(0,
                 DataManager.getInstance()
                         .getDao()
-                        .getCMSPageWithRelatedPiCount(new DateTime(2015, 1, 1, 0, 0).toDate(), new DateTime(2015, 12, 31, 0, 0).toDate(),
+                        .getCMSPageWithRelatedPiCount(DateTools.createDate(2015, 1, 1, 0, 0), DateTools.createDate(2015, 12, 31, 0, 0),
                                 Collections.singletonList("wrong_template")));
         // Wrong date range
         Assert.assertEquals(0,
                 DataManager.getInstance()
                         .getDao()
-                        .getCMSPageWithRelatedPiCount(new DateTime(2016, 1, 1, 0, 0).toDate(), new DateTime(2016, 12, 31, 0, 0).toDate(),
+                        .getCMSPageWithRelatedPiCount(DateTools.createDate(2016, 1, 1, 0, 0), DateTools.createDate(2016, 12, 31, 0, 0),
                                 Collections.singletonList("template_simple")));
     }
 
@@ -2650,7 +2663,7 @@ public class JPADAOTest extends AbstractDatabaseEnabledTest {
                 "STATIC:query AND ( ( UPPER(a.a.a) LIKE :aabbccdd OR UPPER(a.b.b) LIKE :aabbccdd OR UPPER(a.c.c) LIKE :aabbccdd OR UPPER(a.d.d) LIKE :aabbccdd ) ",
                 JPADAO.createFilterQuery("STATIC:query", filters, params));
     }
-    
+
     @Test
     public void createFilterQuery_twoJoinedTables() throws Exception {
         Map<String, String> filters = Collections.singletonMap("b-B_c-C", "bar");
@@ -2658,11 +2671,11 @@ public class JPADAOTest extends AbstractDatabaseEnabledTest {
 
         String expectedFilterString = " LEFT JOIN a.b b LEFT JOIN a.c c WHERE (UPPER(b.B) LIKE :bBcC OR UPPER(c.C) LIKE :bBcC)";
         String filterString = JPADAO.createFilterQuery2("", filters, params);
-            
+
         Assert.assertEquals(expectedFilterString, filterString);
         Assert.assertTrue(params.get("bBcC").equals("%BAR%"));
     }
-    
+
     @Test
     public void createFilterQuery_joinedTableAndField() throws Exception {
         Map<String, String> filters = Collections.singletonMap("B_c-C", "bar");
@@ -2670,10 +2683,8 @@ public class JPADAOTest extends AbstractDatabaseEnabledTest {
 
         String expectedFilterString = " LEFT JOIN a.c b WHERE (UPPER(a.B) LIKE :BcC OR UPPER(b.C) LIKE :BcC)";
         String filterString = JPADAO.createFilterQuery2("", filters, params);
-            
+
         Assert.assertEquals(expectedFilterString, filterString);
         Assert.assertTrue(params.get("BcC").equals("%BAR%"));
     }
-    
-
 }
